tests/files/type_checker_tests/should_pass/289.cmdr
//Test println statements type check
a = 1;
println (2.0, true, 1)[a];
