tests/files/type_checker_tests/should_fail/187.cmdr
//Should fail calling non existing function
println add(1, 2);
